resources/argocd-network/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: netbird-only
  namespace: argocd
spec:
  ipWhiteList:
    sourceRange:
      - 100.64.0.0/10
