resources/argocd-network/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-internal
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`100.65.51.248`)
      kind: Rule
      services:
        - name: argocd-server
          port: 8080
